impr(dmn-styles): prevent scrollbars on input/output tabs

--- a/webapps/client/styles/directives/dmn-table.less
+++ b/webapps/client/styles/directives/dmn-table.less
@@ -1,3 +1,7 @@
 [data-element-id="cell_annotations_ioLabel"] span {
   display: none;
 }
+.ctn-tabbed-content [cam-widget-variable][display] {
+  margin-left: 0;
+  margin-right: 0;
+}
